--- a/phil2/src/index.css
+++ b/phil2/src/index.css
@@ -1,11 +1,21 @@
-.Student{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
- font-size: medium;
- border: 2px  solid black; 
-  margin: 2%;
-  padding: 1%;
-  width: 100px;
+.category{
+  font-size: 2em;
+  font-weight: bold;
+  color: hsla(0, 5%, 9%, 0.89);
+  text-align: center;
+  border: black solid 2px;
+  border-radius: 10px;
+  background-color: lightgrey;
+  padding: 10px;
+  max-width: 500px;
 }
-.Srudent p{
-  margin: 0%;
+
+.list-items{
+    font-size: 1.5em;
+    color: hsla(180, 6%, 21%, 0.836);
+    text-align: center;
+    margin: 20px;
+    border: black solid 2px;
+    list-style: none;
+    max-width: 400px;
 }
